CI tests for Windows and MacOS (#645)
* use matrix for jdk version

* try to add windows and mac hosts

* matrix os

* matrix os

* matrix os

* matrix os

* matrix os

* try to debug windows test failing

* try to debug windows test failing

* try to debug windows test failing

* restore initial config